refactor: organiza bibliotecas na pasta lib e atualiza gitignore